panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__execute__equality-ops__test_ptr_neq.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/equality-ops/test_ptr_neq.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (definition x~1 `int` ∅)
         (definition y~2 `int` ∅)
         (return
            (ptr-not-equal `int`
               (addressof `ptr<int>`
                  (x~1 `int`))
               (addressof `ptr<int>`
                  (y~2 `int`)))))))

----- stderr -----
